# egui_dock

./: CHANGELOG.md  Cargo.toml  README.md
examples/: hello.rs  reject_windows.rs  save_load_dock_state.rs  simple.rs  tab_add.rs  tab_add_popup.rs  text_editor.rs
src/: lib.rs  style.rs
src/dock_state/: window_state.rs
src/dock_state/tree/: mod.rs
src/widgets/dock_area/: drag_and_drop.rs  mod.rs
src/widgets/dock_area/show/: leaf.rs  main_surface.rs  mod.rs  window_surface.rs
