[package]
name = "egui_dock"
description = "Docking system for egui - an immediate-mode GUI library for Rust"
authors = ["lain-dono", "Adam Gąsior (Adanos020)"]
version = "0.19.1"
edition = "2021"
rust-version = "1.92"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Adanos020/egui_dock"
categories = ["gui", "game-development"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
keywords = ["egui", "gui", "tile", "dock", "layout"]

[features]
default = []

# Enable serialization of `Tree`.
serde = ["dep:serde", "egui/serde"]

[dependencies]
egui = { version = "0.34", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

duplicate = "2.0"
paste = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default",
    "default_fonts",
    "glow",
] }
serde_json = { version = "1" }

[[example]]
name = "save_load_dock_state"
required-features = ["serde"]
